# locks

./: .gitignore  CMakeLists.txt  LICENSE  README.md
include/: mutex.h
src/: CMakeLists.txt  main.c  mutex.c
tests/: CMakeLists.txt  mutex_tests.cpp
